# RustGameEngine

./: Cargo.toml
src/: ambient.wgsl  buffers.rs  camera.rs  input.rs  light.rs  light.wgsl  main.rs  quad.rs  renderer.rs  shader.wgsl  texture.rs  vertex.rs
