[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
winit = "0.26.1"
cgmath = "0.18.0"
env_logger = "0.9.0"
log = "0.4.16"
wgpu = "0.12.0"
pollster = "0.2.5"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
anyhow = "1.0.56"
either = "1.6.1"
rand = "0.8.5"
